session starter code

--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -41,6 +41,15 @@ see http://jinja.pocoo.org/docs/templates/#template-inheritance for more informa
           <li><a href="browse">Browse</a></li>
           <li><a href="findauction">Find an Auction</a></li>
         </ul>
+        {% if username is not none %}
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="profile">Hello, {{ username }} </a></li>
+        </ul>
+        {% else %}
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="login">Login</a></li>
+        </ul>
+        {% endif %}
       </div>
     </div>
     {# specify content block so that other templates can use this template as a base #}
