--- a/templates/curr_time.html
+++ b/templates/curr_time.html
@@ -1,10 +1,12 @@
 {% extends "app_base.html" %}
 {% block content %}
 {# include the first two lines above to extend the app_base template #}
+<div class="jumbotron">
 <center>
   <h2>Current Time</h2> 
   <br>
   <p class="text-center">Current time is: {{ time }}</p>
 </center>
+</div>
 {# also make sure to include this very last line as well #}
 {% endblock %}
