--- a/templates/select_time.html
+++ b/templates/select_time.html
@@ -1,5 +1,6 @@
 {% extends "app_base.html" %}
 {% block content %}
+<div class="jumbotron">
 <center>
 <h3> Select a Time </h3> 
 {% if message is defined %}
@@ -10,4 +11,5 @@
 {% include 'timetable.html' %}
 </form>
 </center>
+</div>
 {% endblock %}
